--- a/src/main/java/com/github/tuupertunut/fanning/FanningPane.fxml
+++ b/src/main/java/com/github/tuupertunut/fanning/FanningPane.fxml
@@ -24,11 +24,17 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 -->
 
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <fx:root id="AnchorPane" prefHeight="600.0" prefWidth="800.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TreeTableView fx:id="sensorTreeTable" layoutX="14.0" layoutY="14.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
+      <SplitPane dividerPositions="0.65" layoutX="14.0" layoutY="14.0" orientation="VERTICAL" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+         <items>
+            <TreeTableView fx:id="sensorTreeTable" />
+            <TreeTableView fx:id="controlTreeTable" />
+         </items>
+      </SplitPane>
    </children>
 </fx:root>
