--- a/src/main/java/com/github/tuupertunut/fanning/FanningPane.fxml
+++ b/src/main/java/com/github/tuupertunut/fanning/FanningPane.fxml
@@ -24,16 +24,84 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 -->
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 
-<fx:root id="AnchorPane" prefHeight="600.0" prefWidth="800.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root id="AnchorPane" prefHeight="600.0" prefWidth="1200.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <SplitPane dividerPositions="0.65" layoutX="14.0" layoutY="14.0" orientation="VERTICAL" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
+      <SplitPane dividerPositions="0.3" layoutX="14.0" layoutY="14.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
          <items>
-            <TreeTableView fx:id="sensorTreeTable" />
-            <TreeTableView fx:id="controlTreeTable" />
+            <SplitPane dividerPositions="0.35" orientation="VERTICAL">
+               <items>
+                  <TreeTableView fx:id="controlTreeTable" />
+                  <TreeTableView fx:id="sensorTreeTable" />
+               </items>
+            </SplitPane>
+            <StackPane>
+               <children>
+                  <BorderPane>
+                     <center>
+                        <SplitPane dividerPositions="0.7">
+                           <items>
+                              <AnchorPane>
+                                 <children>
+                                    <Label text="Chart here" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="40.0" />
+                                 </children>
+                              </AnchorPane>
+                              <TableView />
+                           </items>
+                        </SplitPane>
+                     </center>
+                     <top>
+                        <AnchorPane BorderPane.alignment="CENTER">
+                           <children>
+                              <BorderPane AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0">
+                                 <right>
+                                    <Button mnemonicParsing="false" text="Save" BorderPane.alignment="CENTER" />
+                                 </right>
+                                 <center>
+                                    <HBox alignment="CENTER_LEFT" spacing="14.0" BorderPane.alignment="CENTER">
+                                       <children>
+                                          <Button mnemonicParsing="false" text="Delete fan curve" />
+                                          <Label text="Text here: control x controlled by sensor y" />
+                                       </children>
+                                    </HBox>
+                                 </center>
+                              </BorderPane>
+                           </children>
+                        </AnchorPane>
+                     </top>
+                  </BorderPane>
+                  <BorderPane visible="false">
+                     <top>
+                        <AnchorPane BorderPane.alignment="CENTER">
+                           <children>
+                              <BorderPane AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0">
+                                 <right>
+                                    <Button mnemonicParsing="false" text="Save" BorderPane.alignment="CENTER" />
+                                 </right>
+                                 <center>
+                                    <HBox alignment="CENTER_LEFT" spacing="14.0" BorderPane.alignment="CENTER">
+                                       <children>
+                                          <Button mnemonicParsing="false" text="Delete fan curve" />
+                                          <Label text="Text here: control x controlled by sensor y" />
+                                       </children>
+                                    </HBox>
+                                 </center>
+                              </BorderPane>
+                           </children>
+                        </AnchorPane>
+                     </top>
+                  </BorderPane>
+               </children>
+            </StackPane>
          </items>
       </SplitPane>
    </children>
