Attached fan curve panes to the main pane.

--- a/src/main/java/com/github/tuupertunut/fanning/gui/FanningPane.fxml
+++ b/src/main/java/com/github/tuupertunut/fanning/gui/FanningPane.fxml
@@ -39,7 +39,7 @@ THE SOFTWARE.
                   <TreeTableView fx:id="sensorTreeTable" />
                </items>
             </SplitPane>
-            <StackPane />
+            <StackPane fx:id="fanCurvePaneContainer" />
          </items>
       </SplitPane>
    </children>
