Renamed Control to FanController.

--- a/src/main/java/com/github/tuupertunut/fanning/gui/NotSelectedPane.fxml
+++ b/src/main/java/com/github/tuupertunut/fanning/gui/NotSelectedPane.fxml
@@ -31,7 +31,7 @@ THE SOFTWARE.
     <children>
         <AnchorPane AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Label text="Select a control" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0" />
+                <Label text="Select a fan" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0" />
             </children>
         </AnchorPane>
     </children>
