--- a/src/main/java/com/github/tuupertunut/fanning/gui/FanningPane.fxml
+++ b/src/main/java/com/github/tuupertunut/fanning/gui/FanningPane.fxml
@@ -30,17 +30,17 @@ THE SOFTWARE.
 <?import javafx.scene.layout.StackPane?>
 
 <fx:root id="AnchorPane" prefHeight="600.0" prefWidth="1200.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <SplitPane dividerPositions="0.3" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-         <items>
-            <SplitPane dividerPositions="0.35" orientation="VERTICAL">
-               <items>
-                  <TreeTableView fx:id="controlTreeTable" />
-                  <TreeTableView fx:id="sensorTreeTable" />
-               </items>
-            </SplitPane>
-            <StackPane fx:id="fanCurvePaneContainer" />
-         </items>
-      </SplitPane>
-   </children>
+    <children>
+        <SplitPane dividerPositions="0.3" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+            <items>
+                <SplitPane dividerPositions="0.35" orientation="VERTICAL">
+                    <items>
+                        <TreeTableView fx:id="fanTreeTable" />
+                        <TreeTableView fx:id="sensorTreeTable" />
+                    </items>
+                </SplitPane>
+                <StackPane fx:id="fanCurvePaneContainer" />
+            </items>
+        </SplitPane>
+    </children>
 </fx:root>
