--- a/src/main/java/com/github/tuupertunut/fanning/gui/FanCurvePane.fxml
+++ b/src/main/java/com/github/tuupertunut/fanning/gui/FanCurvePane.fxml
@@ -52,12 +52,12 @@ THE SOFTWARE.
                <children>
                   <BorderPane AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0">
                      <right>
-                        <Button mnemonicParsing="false" text="Save" BorderPane.alignment="CENTER" />
+                        <Button fx:id="saveButton" mnemonicParsing="false" text="Save" BorderPane.alignment="CENTER" />
                      </right>
                      <center>
                         <HBox alignment="CENTER_LEFT" spacing="14.0" BorderPane.alignment="CENTER">
                            <children>
-                              <Button mnemonicParsing="false" text="Delete fan curve" />
+                              <Button fx:id="deleteButton" mnemonicParsing="false" text="Delete fan curve" />
                               <Label fx:id="infoLabel" text="infoLabel" />
                            </children>
                         </HBox>
