--- a/src/main/java/com/github/tuupertunut/fanning/gui/FanCurvePane.fxml
+++ b/src/main/java/com/github/tuupertunut/fanning/gui/FanCurvePane.fxml
@@ -27,10 +27,10 @@ THE SOFTWARE.
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 
 <fx:root id="AnchorPane" prefHeight="600.0" prefWidth="800.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -43,7 +43,7 @@ THE SOFTWARE.
                         <Label text="Chart here" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="40.0" />
                      </children>
                   </AnchorPane>
-                  <TableView />
+                  <StackPane fx:id="mapEditorContainer" />
                </items>
             </SplitPane>
          </center>
